--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.0.4"
-  },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^8",
-    "eslint-config-next": "15.0.4"
+    "eslint-config-next": "15.0.4",
+    "typescript": "^5"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
+    "@types/react": "^18.2.25",
+    "next": "^15.0.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-player": "^2.16.0",
+    "react-redux": "^9.1.2"
   }
 }
